--- a/load.Rmd
+++ b/load.Rmd
@@ -493,12 +493,12 @@ l$Male <- l$Female <- l$From_home <- l$calories <-
   l$dist_fastsq <- l$dist_fastsqrt <- l$ned_avslope <- 
   l$interact <- l$interactsq <- l$interactsqrt <- NULL
 
-# Add needed vars
+# Add needed vars - TODO update
 l$clc <- l$clcar <- NA
 
 # Transfer cents data to zones
-c_in_z <- names(cents) == "avslope"
-zones@data <- left_join(zones@data, cents@data[,!c_in_z])
+cents@data$avslope <- NULL
+cents@data <- left_join(cents@data, zones@data)
 
 # Remove NAN numbers (cause issues with geojson_write)
 na_cols  <- which(names(zones) %in%
