--- a/load.Rmd
+++ b/load.Rmd
@@ -413,24 +413,24 @@ ggplot(dfsp) +
   xlim(c(0,12)) +
   theme_bw()
 
-dfsp$dist_band <- cut(dfsp$dist_fast, c(0, 2, 5, 10, 20))
-dfsum <- summarise(group_by(dfsp, scenario, dist_band), Percent = sum(slc) / sum(l$All))
-dfsum$Percent <- dfsum$Percent
-dfspread <- spread(dfsum, scenario, Percent)
-dfspread$dist_band <- as.character(dfspread$dist_band)
-dfspreadf <- c("Total", round(colSums(dfspread[2:ncol(dfspread)])* 100, 1))
-dfspread[3:ncol(dfspread)] <- do.call(cbind, apply(dfspread[3:ncol(dfspread)], 2, function(x) round(x / dfspread[2] * 100, 1)))
-dfspread <- rbind(dfspread, dfspreadf)
-# dfspread <- dfspread[c(1, 2, 7, 3, 4, 5, 6)]
-dfspread$All <- round(as.numeric(dfspread$All) * 100, 1)
-dfspread$All[nrow(dfspread)] <- dfspread$All[nrow(dfspread)] / 100
+dfsp$dist_band <- cut(dfsp$dist_fast, c(0, 2, 5, 10, 40))
+dfsum <- group_by(dfsp, scenario, dist_band) %>% 
+  summarise(Percent = sum(slc) / sum(l$All))
+dfspread <- spread(dfsum, scenario, Percent)[c(1, 4, 2, 3, 5, 6, 7)]
+dfnames <- as.character(dfspread$dist_band)
+dfnames[5] <- "Total"
+dfspread <- dfspread[2:7]
+dfspread[5,] <- colSums(dfspread)
+dfspread[,2:ncol(dfspread)] <- do.call(cbind, apply(dfspread[2:ncol(dfspread)], 2, function(x) x / dfspread[1]))
+dfspread <- dfspread * 100
+names(dfspread) <- c("All", "govtarget", "gendereq", "dutch", "ebike", 
+"Observed level")
 ```
 
 The table below illustrates the same information by distance band.
 
 ```{r, echo=FALSE}
-# names(dfspread)[1:3] <- c("Distance band", 	"All modes", "Observed level (OLC)")
-kable(dfspread, format = "html", digits = 1)
+kable(dfspread, format = "html", digits = 1, caption = "Summary statistics of the rate of cycling by distances bands.")
 ```
 
 ```{r, echo=FALSE, results='hide', fig.cap="Illustration of OD pairs on travel network"}
