--- a/load.Rmd
+++ b/load.Rmd
@@ -52,8 +52,8 @@ region_path <- file.path(pct_data, region)
 if(!dir.exists(region_path)) dir.create(region_path) # create data directory
 
 # Minimum flow between od pairs to show. High means fewer lines
-mflow <- 200
-mflow_short <- 200
+mflow <- 500
+mflow_short <- 500
 
 # Distances
 mdist <- 20 # maximum euclidean distance (km) for subsetting lines
@@ -423,8 +423,8 @@ dfspread <- dfspread[2:7]
 dfspread[5,] <- colSums(dfspread)
 dfspread[,2:ncol(dfspread)] <- do.call(cbind, apply(dfspread[2:ncol(dfspread)], 2, function(x) x / dfspread[1]))
 dfspread <- dfspread * 100
-names(dfspread) <- c("All", "govtarget", "gendereq", "dutch", "ebike", 
-"Observed level")
+names(dfspread) <- c("|  All", "|  govtarget", "|  gendereq", "|  dutch", "|  ebike", "|  Observed level")
+dfspread <- cbind(data.frame(Distance = dfnames), dfspread)
 ```
 
 The table below illustrates the same information by distance band.
